kubernetes/manifests/airbyte-helm-install/ingress-tls.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: airbyteredirecthttps
  namespace: default
spec:
  redirectRegex:
    regex: "^http://(.*)"
    replacement: "https://$1"
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ing-http
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-airbyteredirecthttps@kubernetescrd
spec:
  rules:
    - host: airbyte.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-airbyte-webapp-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ing
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    - hosts:
        - airbyte.local.lan
      secretName: airbyte-tls
  rules:
    - host: airbyte.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-airbyte-webapp-svc
                port:
                  number: 80
