kubernetes/manifests/airbyte-helm-install/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ing
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: airbyte.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-airbyte-webapp-svc
                port:
                  number: 80
